generated-tests/tests/snapshots/ts/test_generated_arrow_function.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
(x: number) => x + y

AST:
(program
  (expression_statement
    (arrow_function
      (formal_parameters
        (required_parameter
          (identifier x)
          (type_annotation
            (predefined_type)
          )
        )
      )
      (binary_expression
        (identifier x)
        (identifier y)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x",
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 3,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 17,
            },
        },
        Usage {
            name: "y",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 21,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
