generated-tests/tests/snapshots/ts/test_generated_as_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
value4 as Type1

AST:
(program
  (expression_statement
    (as_expression
      (identifier value4)
      (type_identifier)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
        Usage {
            name: "Type1",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 16,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
