generated-tests/tests/snapshots/ts/test_generated_assignment_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
x1 = y1

AST:
(program
  (expression_statement
    (assignment_expression
      (identifier x1)
      (identifier y1)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 3,
        },
        SerializableUsage {
            name: "y1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 8,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
