generated-tests/tests/snapshots/ts/test_generated_augmented_assignment_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
x2 += y2

AST:
(program
  (expression_statement
    (augmented_assignment_expression
      (identifier x2)
      (identifier y2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "x2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 3,
        },
        SerializableUsage {
            name: "y2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 9,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
